updated page again

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <li class="p-name">Nils Kakoseos</li><li><a class="u-email" href="mailto:nilskakoseos@gmail.com">nilskakoseos@gmail.com</a></li></ul>
       </div>
 
-      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/caillonantoine"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">Niknymusing</span></a></li><li><a href="https://www.twitter.com/NilsKakoseos"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">Niknymusing</span></a></li></ul>
+      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/Niknymusing"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">Niknymusing</span></a></li><li><a href="https://www.twitter.com/NilsKakoseos"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">Niknymusing</span></a></li></ul>
 </div>
 
       <div class="footer-col footer-col-3">
