--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <meta property="og:site_name" content="Nils Kakoseos" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary" />
-  <meta property="twitter:title" content="Nils Kakoseos" />
+  <meta property="twitter:title" content="Nils Kakoseos Nyström" />
   <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"WebSite","description":"Researcher at musing, working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more.","headline":"Nils Kakoseos","name":"Nils Kakoseos","url":"/"}
+    {"@context":"https://schema.org","@type":"WebSite","description":"I'm an applied mathematician and musician working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more.","headline":"Nils Kakoseos","name":"Nils Kakoseos","url":"/"}
   </script>
   <link rel="stylesheet" href="/assets/css/main.css">
   <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Nils Kakoseos" />
