--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body><header class="site-header" role="banner">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/">Nils Kakoseos</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/">Nils Kakoseos Nyström</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -91,12 +91,12 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Nils Kakoseos</h2>
+    <h2 class="footer-heading">Nils Kakoseos Nyström</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">Nils Kakoseos</li><li><a class="u-email" href="mailto:nilskakoseos@gmail.com">nilskakoseos@gmail.com</a></li></ul>
+          <li class="p-name">Nils Kakoseos Nyström</li><li><a class="u-email" href="mailto:nilskakoseos@gmail.com">nilskakoseos@gmail.com</a></li></ul>
       </div>
 
       <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/Niknymusing"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">Niknymusing</span></a></li><li><a href="https://www.twitter.com/NilsKakoseos"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">Niknymusing</span></a></li></ul>
