--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 </head>
 <body>
     <header class="site-header" role="banner">
-      <div class="wrapper">
-        <a class="site-title" rel="author" href="/">
-          <img src="/assets/images/Nils.jpg" alt="Logo" style="height:100px; vertical-align: middle; margin-right: 1px;">
-          Nils Kakoseos Nyström
-        </a>
-        
-</header>
-<main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        <div class="home"><p><img src="/assets/livestream.jpg" alt="banner" /></p>
-
-<p>I'm an applied mathematician and musician working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more. </p>
+        <div class="wrapper">
+            <a class="site-title" rel="author" href="/">
+                <img src="/assets/images/Nils.jpg" alt="Logo" class="header-logo">
+                Nils Kakoseos Nyström
+            </a>
+        </div>
+    </header>
+    <main class="page-content" aria-label="Content">
+        <div class="wrapper">
+            <div class="home">
+                <p><img src="/assets/livestream.jpg" alt="banner" /></p>
+                <p>I'm an applied mathematician and musician working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more.</p>
 
 <p>You can find my <a href="https://www.canva.com/design/DAGDhlcCou8/GxQmMoMXM9dCUyYVvbVFmA/view?utm_content=DAGDhlcCou8&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV here</a>.</p>
 <h2 class="post-list-heading">Selected Projects</h2>
