--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:title" content="NilsKakoseos" />
   <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"WebSite","description":"AI Engineer and applied mathematician working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more.","headline":"Nils Kakoseos Nyström","name":"Nils Kakoseos Nyström","url":"/"}
+    {"@context":"https://schema.org","@type":"WebSite","description":"AI engineer and applied mathematician working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more.","headline":"Nils Kakoseos Nyström","name":"Nils Kakoseos Nyström","url":"/"}
   </script>
   <link rel="stylesheet" href="/assets/css/main.css">
   <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Nils Kakoseos" />
