--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Nils Kakoseos Nyström" />
   <meta property="og:locale" content="en_US" />
   <meta name="description" content="AI Engineer, working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more." />
-  <meta property="og:description" content="AI Engineer, working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more." />
+  <meta property="og:description" content="AI engineer and applied mathematician, working on neural audio synthesis and other related topics, such as representation learning, realtime generation, and more." />
   <link rel="canonical" href="/" />
   <meta property="og:url" content="/" />
   <meta property="og:site_name" content="Nils Kakoseos Nyström" />
