--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <li class="p-name">email:<li><a class="u-email" href="mailto:nilskakoseos@gmail.com">nilskakoseos@gmail.com</a></li></ul>
       </div>
 
-      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/Niknymusing"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">Github</span></a></li><li><a href="https://www.linkedin.com/in/nils-kakoseos-nystr%C3%B6m-580013150/"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">Linkedin</span></a></li></ul>
+      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/Niknymusing"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">Github</span></a></li><li><a href="www.linkedin.com/in/nils-kakoseos-nyström-580013150"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">Linkedin</span></a></li></ul>
 </div>
 
       <div class="footer-col footer-col-3">
